--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,8 +16,11 @@ jobs:
     permissions:
       contents: read
       packages: write
-
+    defaults:
+      run:
+        working-directory: ./qnx.buildfile.lang.parent
     steps:
+
     - uses: actions/checkout@v4
     - name: Set up JDK 21
       uses: actions/setup-java@v4
@@ -28,7 +31,7 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn -B clean test install package --file qnx.buildfile.lang.parent/pom.xml
+      run: mvn clean test install package
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
