changed groupid to io.github.gvergine

--- a/qnx.buildfile.lang.parent/pom.xml
+++ b/qnx.buildfile.lang.parent/pom.xml
@@ -89,7 +89,7 @@
 				<configuration>
 					<target>
 						<artifact>
-							<groupId>qnx.buildfile.lang</groupId>
+						    <groupId>io.github.gvergine</groupId>
 							<artifactId>qnx.buildfile.lang.target</artifactId>
 							<version>${project.version}</version>
 						</artifact>
