--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -34,6 +34,6 @@ jobs:
       run: mvn clean test install package
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -f ./qnx.buildfile.lang/pom.xml -DaltDeploymentRepository=github
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -f ./qnx.buildfile.lang/pom.xml -DaltDeploymentRepository=github::https://maven.pkg.github.com/gvergine/qnx-buildfile-lang
       env:
         GITHUB_TOKEN: ${{ github.token }}
