--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,13 +27,20 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-
+        server-id: central
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
     - name: Build with Maven
       run: mvn clean test install package
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -f ./qnx.buildfile.lang/pom.xml -DaltDeploymentRepository=github::https://maven.pkg.github.com/gvergine/qnx-buildfile-lang
+    - name: Set Version
+      run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
+    - name: Publish package
+      run: mvn -P release --batch-mode deploy -s $GITHUB_WORKSPACE/settings.xml -DskipTests
       env:
+        MAVEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_SIGNING_KEY_PASSWORD }}
         GITHUB_TOKEN: ${{ github.token }}
