--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Set Version
       run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
     - name: Publish package
-      run: mvn -P release --batch-mode deploy -s $GITHUB_WORKSPACE/settings.xml -DskipTests
+      run: mvn -P release --batch-mode deploy -s $GITHUB_WORKSPACE/settings.xml -DskipTests -Dmaven.javadoc.skipModule=true
       env:
         MAVEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
