--- a/qnx.buildfile.lang.parent/pom.xml
+++ b/qnx.buildfile.lang.parent/pom.xml
@@ -316,6 +316,9 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-source-plugin</artifactId>
       <version>3.3.0</version>
+		 <configuration>
+    <classifier>maven-release-sources</classifier>
+</configuration>
       <executions>
        <execution>
         <id>attach-sources</id>
