--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.ide/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.ide/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 	    <groupId>io.github.gvergine</groupId>
 		<artifactId>qnx.buildfile.lang.parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
 	<artifactId>qnx.buildfile.lang.ide</artifactId>
 	<packaging>eclipse-plugin</packaging>
