--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -33,12 +33,10 @@ jobs:
         server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
         gpg-passphrase: MAVEN_GPG_PASSPHRASE
-    - name: Build with Maven
-      run: mvn clean test install package -Dtycho.mode=release
     - name: Set Version
       run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
     - name: Publish package
-      run: mvn -P release --batch-mode deploy -s $GITHUB_WORKSPACE/settings.xml -DskipTests 
+      run: mvn -P release --batch-mode deploy -s $GITHUB_WORKSPACE/settings.xml 
       env:
         MAVEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
