--- a/qnx.buildfile.lang.parent/pom.xml
+++ b/qnx.buildfile.lang.parent/pom.xml
@@ -24,7 +24,7 @@
 		<id>gvergine</id>
 		<name>Giovanni Vergine</name>
 		<email>verginegiovanni@gmail.com</email>
-		<url>https://gvergine.github.io/url>
+		<url>https://gvergine.github.io</url>
 		</developer>
 	</developers>
 
