--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.ui/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.ui/pom.xml
@@ -1,6 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<name>QNX Buildfile Lang</name>
+	<description>Xtext-based grammar for parsing qnx buildfiles</description>
+	<url>https://github.com/gvergine/qnx-buildfile-lang</url>
+
+	<licenses>
+		<license>
+		<name>Apache License, Version 2.0</name>
+		<url>https://www.apache.org/licenses/LICENSE-2.0</url>
+		<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<connection>https://github.com/gvergine/qnx-buildfile-lang.git</connection>
+		<developerConnection>https://github.com/gvergine/qnx-buildfile-lang.git</developerConnection>
+		<url>https://github.com/gvergine/qnx-buildfile-lang</url>
+	</scm>
+
+	<developers>
+		<developer>
+		<id>gvergine</id>
+		<name>Giovanni Vergine</name>
+		<email>verginegiovanni@gmail.com</email>
+		<url>https://gvergine.github.io</url>
+		</developer>
+	</developers>
 	<parent>
 	    <groupId>io.github.gvergine</groupId>
 		<artifactId>qnx.buildfile.lang.parent</artifactId>
