--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.tests/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.tests/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<name>QNX Buildfile Lang</name>
-	<description>Xtext-based grammar for parsing qnx buildfiles</description>
+	<name>QNX Buildfile Language Tests</name>
+	<description>Tests for qnx.buildfile.lang</description>
 	<url>https://github.com/gvergine/qnx-buildfile-lang</url>
 
 	<licenses>
@@ -31,7 +31,7 @@
 	<parent>
 	    <groupId>io.github.gvergine</groupId>
 		<artifactId>qnx.buildfile.lang.parent</artifactId>
-		<version>1.0.3</version>
+		<version>1.0.4</version>
 	</parent>
 	<artifactId>qnx.buildfile.lang.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
