--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.cli/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.cli/pom.xml
@@ -63,6 +63,39 @@
     <build>
         <plugins>
 
+        <!-- 1. Attach sources (generated + normal sources) -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.3.1</version>
+            <executions>
+                <execution>
+                    <id>attach-sources</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>jar-no-fork</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <!-- 2. Attach javadoc JAR -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.6.3</version>
+            <executions>
+                <execution>
+                    <id>attach-javadocs</id>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <failOnError>false</failOnError>
+            </configuration>
+        </plugin>
             <!-- Build fat/executable jar -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
