Use shaded classifier

--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.cli/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.cli/pom.xml
@@ -131,8 +131,8 @@
                                 </transformer>
                             </transformers>
 
-                            <finalName>QNXBuildfileValidator</finalName>
-                        </configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<shadedClassifierName>shaded</shadedClassifierName>                        </configuration>
                     </execution>
                 </executions>
             </plugin>
