--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Set Version
       run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
     - name: Publish package
-      run: mvn -P release --batch-mode clean package deploy -s $GITHUB_WORKSPACE/settings.xml 
+      run: mvn -P release --batch-mode clean install deploy -s $GITHUB_WORKSPACE/settings.xml 
       env:
         MAVEN_USERNAME: ${{ secrets.CENTRAL_TOKEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.CENTRAL_TOKEN_PASSWORD }}
