--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.lsp/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.lsp/pom.xml
@@ -32,7 +32,7 @@
 	<parent>
 		<groupId>io.github.gvergine</groupId>
 		<artifactId>qnx.buildfile.lang.parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.7</version>
 	</parent>
 	<artifactId>qnx.buildfile.lang.lsp</artifactId>
 	<packaging>jar</packaging>
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>io.github.gvergine</groupId>
 			<artifactId>qnx.buildfile.lang.ide</artifactId>
-			<version>1.0.6</version>
+			<version>1.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtext</groupId>
@@ -59,6 +59,38 @@
 
 	<build>
 		<plugins>
+
+					<!-- Create empty sources.jar and javadoc.jar -->
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>3.4.2</version>
+			<executions>
+
+				<execution>
+				<id>empty-sources</id>
+				<phase>package</phase>
+				<goals>
+					<goal>jar</goal>
+				</goals>
+				<configuration>
+					<classifier>sources</classifier>
+				</configuration>
+				</execution>
+
+				<execution>
+				<id>empty-javadoc</id>
+				<phase>package</phase>
+				<goals>
+					<goal>jar</goal>
+				</goals>
+				<configuration>
+					<classifier>javadoc</classifier>
+				</configuration>
+				</execution>
+
+			</executions>
+			</plugin>
 
 			<!-- Build fat/executable jar -->
 			<plugin>
