Added code completion and formatting

--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.lsp/src/main/vscode/package.json
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.lsp/src/main/vscode/package.json
@@ -18,6 +18,7 @@
         "id": "qnx-buildfile-lang",
         "aliases": ["QNX Buildfile"],
         "extensions": [".build"],
+        "filenamePatterns": ["*.build"],
         "configuration": "./language-configuration.json"
       }
     ],
