--- a/qnx.buildfile.lang.parent/qnx.buildfile.lang.ui/pom.xml
+++ b/qnx.buildfile.lang.parent/qnx.buildfile.lang.ui/pom.xml
@@ -44,4 +44,11 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>io.github.gvergine</groupId>
+			<artifactId>qnx.buildfile.lang</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+	</dependencies>
 </project>
