--- a/examples/standalone-validator/pom.xml
+++ b/examples/standalone-validator/pom.xml
@@ -19,18 +19,24 @@
 			<version>1.0.8</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.xtext</groupId>
-			<artifactId>org.eclipse.xtext</artifactId>
-			<version>2.34.0</version>
-		</dependency>
-		
-		<dependency>
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
 			<version>4.7.6</version>
 		</dependency>
 
-		
+		<dependency>
+			<groupId>org.eclipse.emf</groupId>
+			<artifactId>org.eclipse.emf.ecore</artifactId>
+			<version>2.36.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.xtext</groupId>
+			<artifactId>org.eclipse.xtext</artifactId>
+			<version>2.41.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
